--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
+    "paths": {
+      "ngx-route-manager": [
+        "./dist/ngx-route-manager"
+      ]
+    },
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
