--- a/projects/ngx-route-manager/package.json
+++ b/projects/ngx-route-manager/package.json
@@ -1,6 +1,8 @@
 {
   "name": "ngx-route-manager",
   "version": "0.0.1",
+  "license": "MIT",
+  "author": { "name": "Excellence Pere" },
   "peerDependencies": {
     "@angular/common": "^18.1.0",
     "@angular/core": "^18.1.0"
