--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "~5.5.2"
-  }
+  },
+  "contributors": [
+    {
+      "name": "elsamzzy",
+      "url": "https://github.com/elsamzzy"
+    }
+  ]
 }
